--- a/kadai_019/event.html
+++ b/kadai_019/event.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     </head>
 <body>
-    <main id="main">
+    <main>
         <h2 id="text">今日もお疲れ様です</h2>
         <button id="btn">click me</button>
     </main>
