--- a/kadai_020/event020.html
+++ b/kadai_020/event020.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     </head>
 <body>
-    <main>
-        <h2 id="text">今日もお疲れ様です</h2>
-        <button id="btn">click me</button>
-    </main>
+    <div>
+        <h2 id="text">ボタンをクリックしてください</h2>
+    </div>
+    <button id="btn">ボタン</button>
     <script src="event020.js"></script>
 </body>
 </html>
